compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__match_float_16_bit_error.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<a:float-size(16)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert <<a:float-size(16)>> = x
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/nix/error.gleam:3:16
  │
3 │   let assert <<a:float-size(16)>> = x
  │                ^^^^^^^^^^^^^^^^

This bit array segment option in patterns is not supported for Nix compilation.
